#817 add POST template create endpoint and update swagger documentation
